Tried to remove some more redundant code to fix some performance issues.
Struggling to understand the issues around performance and some layout breaks, but everything appears to be working now.

Learnt lots about the dangers of too many divs.

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,13 @@ p {
     }
 }
 
+@media screen and (max-width: 350px) {
+    nav a,
+    p {
+        font-size: 0.5rem;
+    }
+}
+
 nav a:hover {
     color: #EDBCED;
 }
@@ -258,26 +265,37 @@ nav a:hover {
 }
 
 .portfolio-item-row {
-    display: flex;
-    justify-content: space-around;
     height: 350px;
     width: 90%;
-    margin: 20vh 5vh;
+    margin: 5vh 0;
+    text-align: center;
 }
 
 .portfolio-item {
-    width: 30%;
+    display: inline-block;
+    width: 25%;
     height: 100%;
     position: relative;
     border-radius: 25px;
+    margin: 0 35px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 990px) {
+    .portfolio-main-container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+    }
     .portfolio-item-row {
+        height: 600px;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 90%;
+        padding: 10px;
     }
     .portfolio-item {
         width: 200px;
@@ -285,6 +303,28 @@ nav a:hover {
         position: relative;
         border-radius: 25px;
         margin: 10px;
+    }
+    .text-overlay {
+        height: 180px;
+        width: 100%;
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+        border-radius: 25px;
+        background-color: rgba(195, 202, 195, 0.5);
+        color: black;
+        font-size: 1rem;
+    }
+    .text-overlay:hover {
+        height: 180px;
+        opacity: 0.8;
+        font-size: 1rem;
+        color: black;
     }
 }
 
@@ -299,7 +339,7 @@ nav a:hover {
 }
 
 .text-overlay {
-    height: inherit;
+    height: 100%;
     width: 100%;
     transition: .5s ease;
     opacity: 0;
@@ -310,16 +350,19 @@ nav a:hover {
     -ms-transform: translate(-50%, -50%);
     text-align: center;
     border-radius: 25px;
-    background-color: rgba(195, 202, 195, 0.5)
+    background-color: rgba(195, 202, 195, 0.5);
+    color: black;
+}
+
+.text-overlay:hover {
+    opacity: 0.8;
+    color: black;
+    text-align: center;
+    padding: 30% 0;
 }
 
 .portfolio-item:hover img {
     opacity: 0.5;
-}
-
-.portfolio-image-hover-text {
-    color: black;
-    font-size: 3rem;
 }
 
 
